test/files/neg/badtok-3.check
badtok-3.scala:2: error: input ended while parsing XML
  <x
    ^
one error found
